test/e2e/features/dfp/testdata/common.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: dfp-backend
  namespace: kgateway-base
spec:
  type: DynamicForwardProxy
  dynamicForwardProxy: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kgateway-base
  name: route-dfp
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  rules:
    - name: connect
      matches:
        - method: CONNECT
      backendRefs:
        - name: dfp-backend
          group: gateway.kgateway.dev
          kind: Backend
    - name: http
      backendRefs:
        - name: dfp-backend
          group: gateway.kgateway.dev
          kind: Backend
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: dfp-connect-termination
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: route-dfp
      sectionName: connect
  httpUpgrade:
    - type: CONNECT
      connect:
        terminate: true
