test/e2e/features/dfp/testdata/service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: kgateway-base
  name: simple-svc
  labels:
    app: simple-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: backend-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kgateway-base
  name: backend-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-0
      version: v1
  template:
    metadata:
      labels:
        app: backend-0
        version: v1
    spec:
      containers:
        - image: registry.k8s.io/gateway-api/echo-basic:v1.5.0@sha256:fcbdfab85b3c4441e2fe8fdedd382904332ccb8253a5d51f6006c16903e7ae40
          imagePullPolicy: IfNotPresent
          name: backend-0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: simple-svc
